fix: fixed .block-header__link align for max-width: 768px

--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ body {
 }
 
 @media (max-width: 768px) {
-  .container {
+  .block-header__link {
     text-align: center;
   }
+
 }
 
 .center {
